--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         <h1>Buttons</h1>
         <button onclick="Telegram.WebApp.expand();">Expand Webview</button>
         <button onclick="toggleMainButton();">Toggle Main Button</button>
+        <input type="text">
     </main>
     <div id="viewport"></div>
     <div id="viewport-params-size"></div>
