--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
         <h1>Buttons</h1>
         <button onclick="Telegram.WebApp.expand();">Expand Webview</button>
         <button onclick="toggleMainButton();">Toggle Main Button</button>
-        <input type="text">
+        <textarea rows="4" cols="50">
+            Enter text here...
+        </textarea>
     </main>
     <div id="viewport"></div>
     <div id="viewport-params-size"></div>
