--- a/index.html
+++ b/index.html
@@ -87,9 +87,8 @@
         <h1>Buttons</h1>
         <button onclick="Telegram.WebApp.expand();">Expand Webview</button>
         <button onclick="toggleMainButton();">Toggle Main Button</button>
-        <textarea rows="4" cols="50">
-            Enter text here...
-        </textarea>
+        <br></br>
+        <textarea rows="4" cols="50">Enter text here...</textarea>
     </main>
     <div id="viewport"></div>
     <div id="viewport-params-size"></div>
